2010-07-23  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15209: mod1 -> render_singleSheet uses html table for "styling" 

2010-07-20  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #3903: ACL problem: "edit content" doesn't work (Thanks to Bernhard Kraft)

2010-07-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #13699: static Data Structures not listed in the TemplaVoilà Control Center
	* Fixed issue: #15178: FCE editing forms should match built-in content elements (Thanks to Jeff Segars)

2010-07-17  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15158: XCLASS inclusion inclass.tx_templavoila_label.php wrong 
	* Fixed issue: #15157: tx_staticdstools doesn't follow naming schema
	* Fixed issue: #15124: bind detection for static DS scope to path and not to string '(fce)' in filename  (Thanks to Franz Koch)

2010-07-14  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #14897: TV shows inconsistent in variours TYPO3 versions (Thanks to Christian Noelle)
	* Fixed issue: #15063: Introduce seperate ajax responder to handle d&d calls (Thanks to Nikolas Hagelstein)

2010-07-13  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #15058: disableExplosivePreview doesn't disable Flexible Content preview +manual updated

2010-07-08  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #5780: Elements are shows as references 

2010-07-06  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15022: cm2 should use the common docHeader
	* Fixed issue: #11594: "Create local copy" button of a content element isn't visible for users without write access

2010-07-05  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #14386: Static DS - Centralize access to datastructure / pt.1  - crash case removed
	* Follow-up to: #13928: $calcPerms in mod1 needs to be recreated if grid's are referenced items - typo removed
	* Fixed issue: #15008: mod2 and cm1 dynTab position shouldn't correspond 